fix z-index problems

--- a/packages/common/src/styles/scrollgrid.css
+++ b/packages/common/src/styles/scrollgrid.css
@@ -77,7 +77,7 @@
   & .fc-scrollgrid-section-sticky > * {
     background: var(--fc-page-bg-color);
     position: sticky;
-    z-index: 2; // TODO: var
+    z-index: 3; // TODO: var
     // TODO: box-shadow when sticking
   }
 
